# Console-Renderer

./: .gitignore  CMakeLists.txt  README.md
build-test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  Project.vcxproj  Project.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-test/Project.dir/Release/: .d.json  Project.exe.recipe  camera.cpp.module.json  graphics.cpp.module.json  layer2d.cpp.module.json  main.cpp.module.json  mesh.cpp.module.json  render.cpp.module.json  rubik_cube.cpp.module.json  screen.cpp.module.json  transform.cpp.module.json  tui.cpp.module.json
build-test/Project.dir/Release/Project.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-test/Project.dir/Release/Project_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
build-test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-test/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
example/: 2048.cpp  galaxy.cpp  stress_test.cpp
include/: 04B-03-1.ttf.h  camera.h  graphics.h  layer2d.h  light.h  material.h  math_utils.h  mesh.h  platform.h  render.h  render_engine.h  rubik_cube.h  screen.h  transform.h  tui.h
src/: camera.cpp  graphics.cpp  layer2d.cpp  main.cpp  mesh.cpp  render.cpp  rubik_cube.cpp  screen.cpp  transform.cpp  tui.cpp
